# intelligentBox-

./: .cproject  .project  README.md  sdkconfig  sdkconfig.old
main/: AI_task.c  AI_task.h  CMakeLists.txt  CircularBuffer.c  CircularBuffer.h  Main.c  Main.h  Mysql_task.c  Mysql_task.h  Pin.h  Sht3x_Driver.c  Sht3x_Driver.h  Wifi_task.c  Wifi_task.h  audio_classifier.tflite  buzzer_ldr_task.c  buzzer_ldr_task.h  filter_coeffs-2.h  filter_coeffs.h  filters_task.c  filters_task.h  i2c_task.c  i2c_task.h  i2s_task.c  i2s_task.h  led_task.c  led_task.h  switch_task.c  switch_task.h
